# tg-mcp-server

./: .gitignore  Cargo.toml  README.md  config.json.example
src/: main.rs
src/libs/: mcp_server.rs  mod.rs  tg_client.rs  tg_structs.rs
